<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_camera"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_camera_height"
            android:src="@drawable/img_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_height"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/gps_address"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>

            <EditText
                android:id="@+id/et_gps_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/default_padding"
                android:background="@drawable/rectangle_bg"
                android:enabled="false"
                android:paddingLeft="@dimen/default_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_height"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rectangle_bg"
                android:paddingLeft="@dimen/default_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_height"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rectangle_bg"
                android:paddingLeft="@dimen/default_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_height"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>

            <Spinner
                android:id="@+id/spnr_type"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"

                android:paddingLeft="@dimen/default_padding"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_revise"
            android:layout_width="100dp"
            android:layout_height="@dimen/section_height"
            android:text="@string/revise"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/note"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>

            <EditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rectangle_bg"
                android:paddingLeft="@dimen/default_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
